// Copyright 2024 Ant Group Co., Ltd.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

// NOTE: used by scql agent, to describe task input config in kuscia

syntax = "proto3";

package scql.pb;

option go_package = "proto-gen/scql";
option java_package = "org.secretflow.scql";

import "api/broker.proto";

message ScqlTaskInputConfig {
  // unique id for scql task, should only contain alphabet and number, e.g:
  // 'project01'
  string project_id = 1;
  // scql query, e.g: 'SELECT COUNT(*) FROM ta;'
  string query = 2;
  // tables for each party
  map<string, TableList> tables = 3;
  // ccls for each party to grant
  map<string, PrivacyPolicy> ccls = 4;
  // output ids for each party
  map<string, string> output_ids = 5;
  string initiator = 6;
}

message TableList { repeated TableMeta tbls = 1; }